# ChangeLog for net-misc/anyremote
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Nov 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  -anyremote-4.8.1.ebuild, +anyremote-4.12.ebuild, -files/btio.patch:
  version bump, removed bluetooth patch

  13 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  anyremote-4.8.1.ebuild:
  Added kde,gnome use flags for kanyremote and ganyremote packages respectively

  11 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  anyremote-4.8.1.ebuild:
  Remove quotes on ${A}

  11 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  +anyremote-4.8.1.ebuild, -anyremote-4.8.1-r1.ebuild, +files/btio.patch:
  Upstream patch for compilation failure when --disable-bluez was used

  11 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  -anyremote-4.8.1.ebuild, +anyremote-4.8.1-r1.ebuild:
  Drop kde,gnome use flags

  10 Sep 2008; Markos Chandras (hwoarang) <gentoo@silverarrow.gr>
  +anyremote-4.8.1.ebuild, +metadata.xml:
  New ebuild for bug #209686
