@@ -1,4 +1,4 @@
 DIST anyremote-4.12.tar.gz 1288726 RMD160 ef6aa8844ffdb7703c65684286af75666503e1eb SHA1 15d5d6ece9d7318197f8c0377fe7d9f4af866944 SHA256 4a033d62d7aa7aaeafd90eca2b71f4a08a2885cae9ff6314effa288c46423280
-EBUILD anyremote-4.12.ebuild 880 RMD160 cd9065affb5b8b24f94c221f45c29891cb53e823 SHA1 e387cd3c58f6ab84656f74241c745c071341fee9 SHA256 f85ffc5a18d594d9980f66ddff5b770e5b62ccbde8b505d9070b3a09b0a0bf17
-MISC ChangeLog 1078 RMD160 430126f77e00236da57447601a933c143a3f5845 SHA1 7f82bd6f7d968fab51fb6aa3d7a38ce4959ffdea SHA256 6389863e42a9c4b0eb5d9891543693bd81faf2ff0c77695016c2f5e217ff0a11
+EBUILD anyremote-4.12.ebuild 838 RMD160 af4408cd37bc616318a512350a704e412311c056 SHA1 746fb5a81adba7a4f42c610bb5bfe928ddd92cd6 SHA256 7719594c1291fc8af315c9c6feb780b10fe659d87459fdecabb987de1309ce8d
+MISC ChangeLog 1189 RMD160 f27552ea15a6a0e95ec39a0352f7b61f18d03bb1 SHA1 33dbd87554aaf4007637ef73ad8f5479a1da90a8 SHA256 d59789d0526cd0795345009e7bb26c4d39771517f781b1971c5191dd29a1c6be
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
